# pyGecko

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
analysis/: analysis.py
data_handling/: reports.py
docs/: conf.py
docs/source/: conf.py  index.rst  intro.rst  pygecko.gc_tools.analysis.rst  pygecko.gc_tools.rst  pygecko.gc_tools.sequence.rst
examples/adhoc/: plate_processing.py
examples/buchwald_hartwig/: plate_processing.py
examples/spectral_matching/: spectral_matching.py
examples/thiolation_of_heteroarenes/: plate_processing.py
gc_tools/: __init__.py
gc_tools/analysis/: quantification.py  retention_indices.py  spectral_matching.py
gc_tools/injection/: __init__.py  fid_injection.py  injection.py  ms_injection.py
gc_tools/peak/: __init__.py  ms_peak.py  peak.py  peak_detection_fid.py  peak_detection_ms.py
gc_tools/sequence/: fid_sequence.py  gc_sequence.py
notebooks/quantification/: FKB-FA-060-A1.xy  quantification_example.ipynb
notebooks/spectral_matching/: FBS-FA-034-D1.mzML  FKB-FA-062-Prod.mzML  spectral_matching.ipynb
parsers/: __init__.py  agilent_fid_parser.py  fid_base_parser.py  file_readers.py  utilities.py
pygecko/: __init__.py  config.ini
pygecko/analysis/: __init__.py  analysis.py
pygecko/data_handling/: __init__.py  reports.py
pygecko/gc_tools/: __init__.py  analyte.py  utilities.py
pygecko/gc_tools/analysis/: __init__.py  analysis_settings.py  quantification.py  retention_indices.py  spectral_matching.py
pygecko/gc_tools/injection/: __init__.py  fid_injection.py  injection.py  ms_injection.py
pygecko/gc_tools/peak/: __init__.py  fid_peak.py  ms_peak.py  peak.py  peak_detection_fid.py  (+1 more)
pygecko/parsers/: __init__.py  agilent_fid_parser.py  agilent_ms_parser.py  fid_base_parser.py  file_readers.py  ms_base_parser.py  msconvert_wraper.py  utilities.py
pygecko/reaction/: __init__.py  array.py  layout.py  perera_dataset.pbtxt  reaction_parser.py  well_plate.py
pygecko/visualization/: __init__.py  utilities.py  visuals.py
reaction/: __init__.py  reaction_parser.py  transformation.py  utilities.py  well_plate.py
tests/integration/: test_fid_injection.py  test_fid_ri_calibration.py  test_fid_sequence.py  test_ms_injection.py  test_ms_ri_calibration.py  test_ms_sequence.py
visualization/: __init__.py  visuals.py
(+61 files in other folders)
