[tool.poetry]
name = "pygecko"
version = "0.1.0"
description = "An open-source Python libary for the parsing, processing and analysis of GC/MS and GC/FID raw data"
authors = ["Felix Katzenburg <felix.katzenburg@uni-muenster.de>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
brain-isotopic-distribution = "1.5.14"
epam-indigo = "1.13.0"
lxml = "5.1.0"
matplotlib = "3.6.2"
numba = "0.58.1"
numpy = "1.26.3"
ord-schema = "0.3.37"
pandas = "2.0.3"
pybaselines = "1.0.0"
pymzml = "2.5.2"
pyteomics = "4.6.2"
rdkit = "2023.3.1"
reportlab = "4.0.5"
scipy = "1.11.4"
sphinx-rtd-theme = "2.0.0"
statsmodels = "0.14.0"
xarray = "2023.6.0"
scikit-learn = "^1.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"